# pipeline_etl

./: pyproject.toml
coleta/coleta/spiders/: mercadolivre.py
